--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
 		<relativePath/>
 	</parent>
 
+	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Maven Central</name>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<groupId>io.github.com.omateusamaral</groupId>
 	<artifactId>todo-spring-boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -79,6 +87,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
